Building correct Visual Studio 2022 solution

--- a/project/src/SimplexNoise/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/project/src/SimplexNoise/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -167,7 +167,7 @@ MRUItem0=/Game/Main
 LastLevel=/Game/Main
 
 [ModuleFileTracking]
-SimplexNoise.TimeStamp=2024.01.14-18.07.19
+SimplexNoise.TimeStamp=2024.01.14-20.10.33
 SimplexNoise.LastCompileMethod=External
 StorageServerClient.TimeStamp=2024.01.08-22.23.12
 StorageServerClient.LastCompileMethod=External
@@ -1233,7 +1233,7 @@ ExternalImagePicker.TimeStamp=2024.01.08-22.23.00
 ExternalImagePicker.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=
 
