--- a/project/src/SimplexNoise/Config/DefaultEngine.ini
+++ b/project/src/SimplexNoise/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Main.Main
 EditorStartupMap=/Game/Main.Main
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
